# hirise_chip_analyzer

./: .gitignore  README.md  environment.yml  pyproject.toml
src/hirise_chip_analyzer/: __init__.py  __main__.py
src/hirise_chip_analyzer/core/: classifier.py  file_organizer.py  image_loader.py
src/hirise_chip_analyzer/gui/: __init__.py  main_window.py
tests/: __init__.py  test_classifier.py  test_file_organizer.py  test_image_loader.py
